objects/Hardware_Form__c/Hardware_Form__c.object-meta.xml
<CustomObject>
    <description>This object is used in the communities website to intake automate Hardware Infrastructure Requests</description>
    <label>Hardware Delivery Questionnaire</label>
    <nameField>
        <displayFormat>HPR-{00000}</displayFormat>
        <label>Hardware Hardware Delivery Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hardware Delivery Questionnaire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>