objects/Hardware_Form__c/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <description>Copy of the account owner email address when the record is created. Used in automation only and not for page layout.</description>
    <label>Account Owner Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>