objects/Hardware_Form__c/fields/Add_unpacking_to_inside_delivery__c.field-meta.xml
<CustomField>
    <fullName>Add_unpacking_to_inside_delivery__c</fullName>
    <label>Add unpacking to inside delivery?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>