objects/Hardware_Form__c/fields/Broker_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company_Name__c</fullName>
    <description>required for international shipments only ref #INC0131665</description>
    <label>Broker Company Name</label>
    <type>TextArea</type>
</CustomField>