objects/Hardware_Form__c/fields/Broker_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact_Email__c</fullName>
    <description>required for international shipments only, ref#INC0131665</description>
    <label>Broker Contact Email</label>
    <type>Email</type>
</CustomField>