objects/Hardware_Form__c/fields/Broker_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact_Name__c</fullName>
    <description>required for international shipments only ref #INC0131665</description>
    <label>Broker Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>