objects/Hardware_Form__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>