objects/Hardware_Form__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Contact Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>