objects/Hardware_Form__c/fields/Created_By_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Contact_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TAN-972: Account of the contact that created the request. Used to allow review of hardware requests for an account.</description>
    <label>Created By Contact Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Hardware_Purchase_Request_Form</relationshipName>
    <type>Lookup</type>
</CustomField>