objects/Hardware_Form__c/fields/Created_by_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Running_User__c</fullName>
    <description>Used in list views to enable community users to see records they created</description>
    <formula>/* Check if the currrent user matches the created by user */
IF(

$User.Id = CreatedById,

TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Running User</label>
    <type>Checkbox</type>
</CustomField>