objects/Hardware_Form__c/fields/Delivery_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_1__c</fullName>
    <label>Delivery Address # 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>