objects/Hardware_Form__c/fields/Delivery_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Name__c</fullName>
    <label>Delivery Contact Name</label>
    <type>TextArea</type>
</CustomField>