objects/Hardware_Form__c/fields/Delivery_Location_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Country__c</fullName>
    <label>Delivery Location Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HQ_Country</valueSetName>
    </valueSet>
</CustomField>