objects/Hardware_Form__c/fields/Delivery_Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Postal_Code__c</fullName>
    <description>Zip / Postal Code of the delivery address</description>
    <label>Delivery Location Postal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>