objects/Hardware_Form__c/fields/Delivery_Location_Province__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Province__c</fullName>
    <description>Name of the delivery address province, state or county</description>
    <label>Delivery Location Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>