objects/Hardware_Form__c/fields/Delivery_Ticket_Required__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Ticket_Required__c</fullName>
    <label>Delivery Ticket Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>