objects/Hardware_Form__c/fields/Details_of_Delivery_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Delivery_Ticket__c</fullName>
    <inlineHelpText>If Delivery Ticket required Add Details</inlineHelpText>
    <label>Details of Delivery Ticket</label>
    <type>TextArea</type>
</CustomField>