objects/Hardware_Form__c/fields/Does_the_Facility_Require_and_Cert_of_I__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Facility_Require_and_Cert_of_I__c</fullName>
    <label>Does the Facility Require and Cert. of I</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>