objects/Hardware_Form__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the user submitted a request</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>