objects/Hardware_Form__c/fields/End_User_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>End_User_Accepted_Date__c</fullName>
    <description>Date that the disclaimers were accepted by the Hardware Request Community User.</description>
    <label>End User Accepted Date</label>
    <type>Date</type>
</CustomField>