objects/Hardware_Form__c/fields/End_User_Accepted_Email__c.field-meta.xml
<CustomField>
    <fullName>End_User_Accepted_Email__c</fullName>
    <description>TAN-958: Email address of the person that accepts the disclaimer that applies to non-US Delivery Location Countries.</description>
    <label>End User Accepted Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>