objects/Hardware_Form__c/fields/End_User_Accepted_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Accepted_Name__c</fullName>
    <description>Capture the user that is agreeing to the disclaimer terms. This is the equivalent to a user signature.</description>
    <label>End User Accepted Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>