objects/Hardware_Form__c/fields/End_User_Accepted_Phone__c.field-meta.xml
<CustomField>
    <fullName>End_User_Accepted_Phone__c</fullName>
    <description>TAN-958: Phone number of the person accepting the disclaimer that applies to non-US delivery location countries.</description>
    <label>End User Accepted Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>