objects/Hardware_Form__c/fields/End_User_Accepted_Terms__c.field-meta.xml
<CustomField>
    <fullName>End_User_Accepted_Terms__c</fullName>
    <description>Copy of the terms accepted by the user for international delivery. This allows for a static copy of what was accepted, given that terms could change over time.</description>
    <label>End User Accepted Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>