objects/Hardware_Form__c/fields/End_User_Accepted_Title__c.field-meta.xml
<CustomField>
    <fullName>End_User_Accepted_Title__c</fullName>
    <description>TAN-958: Title of the person agreeing to the disclaimers that apply to non-US delivery location countries.</description>
    <label>End User Accepted Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>