objects/Hardware_Form__c/fields/Forklift_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Forklift_On_Site__c</fullName>
    <label>Forklift On-Site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>