objects/Hardware_Form__c/fields/HQ_Address__c.field-meta.xml
<CustomField>
    <fullName>HQ_Address__c</fullName>
    <description>TAN-959: Capture the IOR Contact Info Account Headquarters address.</description>
    <label>HQ Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>