objects/Hardware_Form__c/fields/IOR_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>IOR_Contact_Email__c</fullName>
    <description>TAN-949: Email address of the IOR Contact</description>
    <label>IOR Contact Email</label>
    <type>Email</type>
</CustomField>