objects/Hardware_Form__c/fields/Is_a_Lift_Gate_Required_No_Dock__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Lift_Gate_Required_No_Dock__c</fullName>
    <label>Is a Lift Gate Required (No Dock)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>