objects/Hardware_Form__c/fields/Is_an_Inside_Delivery_Requested__c.field-meta.xml
<CustomField>
    <fullName>Is_an_Inside_Delivery_Requested__c</fullName>
    <label>Is an Inside Delivery Requested?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>