objects/Hardware_Form__c/fields/Loading_Dock_End_Text__c.field-meta.xml
<CustomField>
    <fullName>Loading_Dock_End_Text__c</fullName>
    <description>Capture the loading doc end time entered as text. Populated from Flow.</description>
    <label>Loading Dock End Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>