objects/Hardware_Form__c/fields/Loading_Dock_Start_Text__c.field-meta.xml
<CustomField>
    <fullName>Loading_Dock_Start_Text__c</fullName>
    <description>Store the loading doc time as a text field value.</description>
    <label>Loading Dock Start Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>