objects/Hardware_Form__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TAN-971: Added filter that the opportunity account must match the submitted by contact&apos;s account.</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The opportunity account must be the same as the Hardware Request Contact&apos;s Account</errorMessage>
        <filterItems>
            <field>$Source.Created_By_Contact_Account__c</field>
            <operation>equals</operation>
            <valueField>Opportunity.AccountId</valueField>
        </filterItems>
        <infoMessage>Only opportunities where the Account matches the Created by Contact Account can be linked to this Hardware Request</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Hardware_Purchase_Request_Form</relationshipName>
    <type>Lookup</type>
</CustomField>