objects/Hardware_Form__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Phone number of the user submitting the request</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>