objects/Hardware_Form__c/fields/Product_Usage_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_Purpose__c</fullName>
    <description>TAN-911: How the product is intended to be used by the requesting party.</description>
    <label>Product Usage Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>