objects/Hardware_Form__c/fields/Request_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Request_Lookup__c</fullName>
    <description>Add additional values for users to see draft Hardware Requests details in the community</description>
    <formula>Name &amp; &quot; - &quot; &amp; &quot;Delivery Country: &quot; &amp; text(Delivery_Location_Country__c) 
&amp; &quot; - &quot; &amp; &quot;Created: &quot; &amp; TEXT(YEAR(datevalue(CreatedDate))) &amp;&quot;-&quot;&amp; LPAD(TEXT(MONTH (datevalue(CreatedDate))),2,&quot;0&quot;)&amp;&quot;-&quot;&amp;LPAD(TEXT(DAY (datevalue(CreatedDate))),2,&quot;0&quot;)</formula>
    <label>Request Lookup</label>
    <type>Text</type>
</CustomField>