objects/Hardware_Form__c/fields/TAN_DEV_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_DEV_Fiber_Quantity__c</fullName>
    <description>Capture the total of the fiber quantity values entered.</description>
    <label>Fiber Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>