objects/Hardware_Form__c/fields/TAN_M_Copper_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_M_Copper_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter Quantity for TAN-M</inlineHelpText>
    <label>TAN-M Copper Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>