objects/Hardware_Form__c/fields/TAN_S_Copper_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_S_Copper_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter quantity for TAN-S Product</inlineHelpText>
    <label>TAN-S Copper Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>