objects/Hardware_Form__c/fields/TAN_XL_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_XL_Fiber_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TAN-XL Fiber Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>