objects/Hardware_Form__c/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <description>Tax Id for the IOR Contact.</description>
    <inlineHelpText>If a partner is involved, most likely they will be the IOR and will need to provide their VAT#</inlineHelpText>
    <label>Tax ID (VAT/GST/ABN)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>