objects/Hardware_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Request_Status__c</columns>
    <columns>End_User_Accepted_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>