objects/Hardware_Form__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
    <language>en_US</language>
</ListView>