objects/Hardware_Form__c/listViews/Hardware_Purchase_Requests_Hardware_Form.listView-meta.xml
<ListView>
    <fullName>Hardware_Purchase_Requests_Hardware_Form</fullName>
    <filterScope>Queue</filterScope>
    <label>Hardware Purchase Requests</label>
    <queue>Hardware_Purchase_Requests</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>