objects/Hardware_Form__c/listViews/My_Draft_Requests.listView-meta.xml
<ListView>
    <fullName>My_Draft_Requests</fullName>
    <columns>NAME</columns>
    <columns>TAN_DEV_Copper_Quantity__c</columns>
    <columns>TAN_DEV_Fiber_Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>1- Draft</value>
    </filters>
    <label>My Draft Requests</label>
    <language>en_US</language>
</ListView>