objects/Hardware_Form__c/listViews/My_Hardware_Purchase_Requests.listView-meta.xml
<ListView>
    <fullName>My_Hardware_Purchase_Requests</fullName>
    <columns>NAME</columns>
    <columns>Tanium_Quote__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Company_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_by_Running_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Hardware Delivery Questionnaire</label>
</ListView>